<resources>
    <string name="app_name">bar</string>
    <string name="tv1_text">ctl</string>
    <string name="tv2_text">hello world hello world hello world hello world hello world hello world hello world hello world </string>
    <string name="btn_login_text">login</string>
    <string name="btn_reset_text">reset</string>
    <string name="et1_hint">请输入用户名</string>
    <string name="et2_hint">请输入密码</string>
    <string name="btn_pb1_text">显示隐藏</string>
    <string name="btn_pb2_text">开始结束</string>
    <string name="btn_notify1_text">测试通知</string>
    <string name="btn_notify2_text">取消通知</string>

    <string name="text1">text66该gfd</string>
    <string name="text2">text674hgf</string>


    <string name="bar_user_content">com.tequeno.bar.usercontentprovider</string>
    <string name="bar_file_provider">com.tequeno.bar.fileprovider</string>

    <string name="export_name_myintent">com.tequeno.bar.myintent</string>
    <string name="export_name_myreceiver">com.tequeno.bar.myreceiver</string>
    <string name="export_name_mybackreceiver">com.tequeno.bar.mybackreceiver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>